Добавил в корневую папку проекта папку со шрифтами и подключил их в style.css

--- a/article.html
+++ b/article.html
@@ -4,19 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>ShopOnline</title>
+	<link rel="preload" href="../fonts/DroidSerif/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="../fonts/Lato/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<main>
 		<article>
-
 			<section class="one">
 				<div class="container">
-
 					<h1>Как ухаживать за обувью из кожи</h1>
-
 					<p>Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить,
 						она
 						идеально ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует
@@ -40,18 +39,15 @@
 							<li>Ежедневный уход за кожаной обувью в домашних условиях</li>
 						</ol>
 						<img src="images/ShopOnline1.jpg" alt="Фото ботинок">
-
 					</div>
 				</section>
 				<section>
 					<div class="container__one">
-
-						<h2>На что стоит обратить внимание перед покупкой </h2>
+						<h2>На что стоит обратить внимание перед покупкой</h2>
 						<p>Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
 							испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
 							образовываться складки и заломы. </p>
 					</div>
-
 				</section>
 
 				<section>
@@ -65,13 +61,11 @@
 				<section>
 					<div class="container__one">
 						<h2>Ежедневный уход за кожаной обувью в домашних условиях</h2>
-
 						<p>Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
 							появляются
 							трудновыводимые пятна, портится цвет кожи, образуются трещины. </p>
 					</div>
 				</section>
-
 			</article>
 
 			<article>
@@ -92,7 +86,6 @@
 				<section>
 					<div class="container__one">
 						<p class="text">Второй этап – сушка. <br>
-
 							Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
 							сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи. <br>
 							Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
@@ -112,20 +105,15 @@
 							Крем подбирается точно в цвет обуви, поэтому стоит задуматься ещё перед покупкой, каким уходовым
 							средством
 							вы будете пользоваться. <br>
-
 							В магазине легко подобрать черный, коричневый и самый универсальный – бесцветный крем. В продаже есть и
 							другие цвета, но бывает сложно найти нужный оттенок. <br>
-
-							По мере необходимости дополнительно обрабатывайте пару</p>
-
+							По мере необходимости дополнительно обрабатывайте пару
+						</p>
 					</div>
 				</section>
-
 			</article>
-
 		</article>
 	</main>
-
 </body>
 
 </html>
