Добавил в корневую папку проекта папку со шрифтами и подключил их в style.css

--- a/article.html
+++ b/article.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ShopOnline</title>
-	<link rel="preload" href="../fonts/DroidSerif/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="../fonts/Lato/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/DroidSerif/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/Lato/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
