Добавил в index.html модификатор, чтобы вёрстка была по БЭМ

--- a/article.html
+++ b/article.html
@@ -32,7 +32,7 @@
 
 			<article>
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<ol class="list-item">
 							<li>На что стоит обратить внимание перед покупкой</li>
 							<li>Перед тем, как надеть обувь первый раз</li>
@@ -42,7 +42,7 @@
 					</div>
 				</section>
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<h2>На что стоит обратить внимание перед покупкой</h2>
 						<p>Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
 							испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
@@ -51,7 +51,7 @@
 				</section>
 
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<h2>Перед тем, как надеть обувь первый раз</h2>
 						<p>Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
 							натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.</p>
@@ -59,7 +59,7 @@
 				</section>
 
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<h2>Ежедневный уход за кожаной обувью в домашних условиях</h2>
 						<p>Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
 							появляются
@@ -69,7 +69,7 @@
 			</article>
 
 			<article>
-				<div class="container__one">
+				<div class="container --container-one">
 					<section>
 						<p>После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
 							тряпкой
@@ -84,7 +84,7 @@
 				</div>
 
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<p class="text">Второй этап – сушка. <br>
 							Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
 							сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи. <br>
@@ -96,7 +96,7 @@
 				</section>
 
 				<section>
-					<div class="container__one">
+					<div class="container --container-one">
 						<p class="last-text">И наконец – крем. <br>
 							Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
 							Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности. Затем
