--- a/article.html
+++ b/article.html
@@ -7,71 +7,73 @@
 	<title>ShopOnline</title>
 	<link rel="preload" href="fonts/DroidSerif/DroidSerif-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/Lato/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<main>
-		<article>
-			<section class="one">
+		<article class="article-main">
+			<section class="article-main__one">
 				<div class="container">
-					<h1>Как ухаживать за обувью из кожи</h1>
-					<p>Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить,
+					<h1 class="article-main__one-title">Как ухаживать за обувью из кожи</h1>
+					<p class="article-main__one-text">Материала для обуви лучше натуральной кожи все ещё не придумали. Качественную кожу очень приятно носить,
 						она
 						идеально ложится по ноге, в нужных местах немного растягивается. В кожаной обуви, если она соответствует
 						погоде, создаётся хороший микроклимат – ноги не мёрзнут, не потеют, и чувствуют себя очень комфортно.
 						Неудивительно, что по статистике больше 60% покупателей выбирает обувь именно из гладкой натуральной кожи.
 						Вдобавок кожа практична и не требует трудоёмкого ухода.</p>
 
-					<p> Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так
+					<p class="article-main__one-text"> Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться. Так
 						же,
 						как кожа лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит срок службы любимой
 						пары и сделает её аккуратной и сияющей, словно только что из магазина.</p>
 				</div>
 			</section>
 
-			<article>
-				<section>
-					<div class="container --container-one">
+			<article class="article-main__wrap">
+				<section class="article-main__wrap-two">
+					<div class="container --container-large">
 						<ol class="list-item">
-							<li>На что стоит обратить внимание перед покупкой</li>
-							<li>Перед тем, как надеть обувь первый раз</li>
-							<li>Ежедневный уход за кожаной обувью в домашних условиях</li>
+							<li class="item">На что стоит обратить внимание перед покупкой</li>
+							<li class="item">Перед тем, как надеть обувь первый раз</li>
+							<li class="item">Ежедневный уход за кожаной обувью в домашних условиях</li>
 						</ol>
 						<img src="images/ShopOnline1.jpg" alt="Фото ботинок">
 					</div>
 				</section>
-				<section>
-					<div class="container --container-one">
-						<h2>На что стоит обратить внимание перед покупкой</h2>
-						<p>Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
+
+				<section class="article-main__wrap-three" >
+					<div class="container --container-large">
+						<h2 class="article-main__wrap-title">На что стоит обратить внимание перед покупкой</h2>
+						<p class="article-main__wrap-text">Подбирайте обувь точно по размеру и полноте. Слишком тесная обувь будет чрезмерно растягиваться, и кожа
 							испортится, не говоря уже о дискомфорте. А если модель сидит слишком свободно, то при ходьбе на ней начнут
 							образовываться складки и заломы. </p>
 					</div>
 				</section>
 
-				<section>
-					<div class="container --container-one">
-						<h2>Перед тем, как надеть обувь первый раз</h2>
-						<p>Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
+				<section class="article-main__wrap-thour">
+					<div class="container  --container-large">
+						<h2 class="article-main__wrap-title">Перед тем, как надеть обувь первый раз</h2>
+						<p class="article-main__wrap-text">Перед первой ноской для новой пары нужно подобрать водо- или грязеотталкивающее средство, подходящее для
 							натуральной кожи, и обработать кожу в соответствии с инструкцией. После высыхания – чистить кремом.</p>
 					</div>
 				</section>
 
-				<section>
-					<div class="container --container-one">
-						<h2>Ежедневный уход за кожаной обувью в домашних условиях</h2>
-						<p>Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
+				<section class="article-main__wrap-five">
+					<div class="container  --container-large">
+						<h2 class="article-main__wrap-title">Ежедневный уход за кожаной обувью в домашних условиях</h2>
+						<p class="article-main__wrap-text">Лучше всего заняться обувью сразу после возвращения домой. Если этого не делать, то со временем
 							появляются
 							трудновыводимые пятна, портится цвет кожи, образуются трещины. </p>
 					</div>
 				</section>
 			</article>
 
-			<article>
-				<div class="container --container-one">
-					<section>
-						<p>После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
+			<article class="article-main__inner">
+				<div class="container --container-large">
+					<section class="article-main__inner-six">
+						<p class="article-main__inner-text">После каждого выхода на улицу протирайте обувь сухой салфеткой, если на коже только пыль, или влажной
 							тряпкой
 							-
 							в случае сильного загрязнения. Начинайте мыть с каблука, затем очистите подошву и после этого – материал
@@ -79,13 +81,13 @@
 							После мытья нужно как следует протереть пару мягкой тканью, чтобы избавить от лишней влаги. Иначе обувь
 							будет
 							сушиться очень долго.</p>
-						<img src="images/ShopOnline2.jpg" alt="Принадлежности по уходу за обувью">
+						<img class="article-main__inner-img" src="images/ShopOnline2.jpg" alt="Принадлежности по уходу за обувью">
 					</section>
 				</div>
 
-				<section>
-					<div class="container --container-one">
-						<p class="text">Второй этап – сушка. <br>
+				<section class="article-main__inner-seven">
+					<div class="container --container-large">
+						<p class="article-main__inner-text">Второй этап – сушка. <br>
 							Ни в коем случае не используйте источники тепла – батарею, обогреватель, фен с горячим воздухом. Да, они
 							сушат быстро, но за это приходит расплата в виде задубевшей покоробившейся кожи. <br>
 							Нужно вытащить стельки, набить обувь бумагой либо положить внутрь формодержатели и сушить при комнатной
@@ -95,9 +97,9 @@
 					</div>
 				</section>
 
-				<section>
-					<div class="container --container-one">
-						<p class="last-text">И наконец – крем. <br>
+				<section class="article-main__inner-octet">
+					<div class="container --container-large">
+						<p class="article-main__inner-text">И наконец – крем. <br>
 							Сухую и чистую пару нужно обработать кремом, чтобы кожа оставалась эластичной, мягкой и блестящей.
 							Нанесите крем тоненьким слоем с помощью обувной щётки, и аккуратно распределите по всей поверхности. Затем
 							через несколько часов, когда крем впитается, сотрите остатки сухой салфеткой и отполируйте кожу мягкой
